[package]
name = "molint"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[dependencies]
anyhow = "1.0.89"
boys = "0.1.0"
indexmap = "2.6.0"
itertools = "0.13.0"
log = "0.4.22"
nalgebra = "0.33.0"
ndarray = "0.16.1"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
smallvec = "1.13.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5.1"


[[bench]]
name = "integrals"
harness = false
